# Gates-of-Eras

./: CMakeLists.txt
assets/map/: map.txt
src/: Game.cpp  Game.hpp  main.cpp
src/Config/: Config.cpp  Config.hpp
src/Ext/: Ext.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Tilemap/: Tilemap.cpp  Tilemap.hpp
src/Window/: Window.cpp  Window.hpp
